fixed z-index of header

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -5,6 +5,7 @@
   background-color: #29738f;
   width: 100%;
   height: 60px;
+  z-index: 5;
 }
 
 .header .leftSide {
@@ -13,7 +14,6 @@
   justify-content: left;
   align-items: center;
   padding-left: 25px;
-  z-index: 2;
 }
 
 .header .leftSide img {
